SF Primes/src/objects/CB_OEM_District__c.object
<CustomObject>
    <description>This object holds OEM District records.  Original intent is to support GM District alignment and communication record keeping for CDK (Cobalt/DMG) Services group.  It may be expanded to the Digital Adviser group if they choose to use this as well.

A district is typically an area that contains dealership rooftops (a group of dealers) as defined by the OEM.  GM specifically has districts based on the brand of cars.  For example - One dealer may be part of the Chevrolet Seattle district and the Buick/GMC Seattle District.</description>
    <fields>
        <fullName>CB_District_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a contact from the listed Region Account.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.CB_Region_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OEM District</relationshipLabel>
        <relationshipName>District_Manager_Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_FRM_GM_Division__c</fullName>
        <description>This formula uses the District name to determine which GM brand (division) the district is related to.</description>
        <formula>IF( CONTAINS(CB_OEM_District_Name__c , &quot; Chv&quot;), &quot;Chevrolet&quot;,
IF( Contains(CB_OEM_District_Name__c , &quot; BG&quot;), &quot;Buick/GMC&quot;,
IF( Contains(CB_OEM_District_Name__c , &quot; Cad&quot;), &quot;Cadillac&quot;, &quot;&quot;)))</formula>
        <label>GM Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB_OEM_District_Name__c</fullName>
        <inlineHelpText>This is the OEM&apos;s District code or name as dictated by the OEM.</inlineHelpText>
        <label>OEM District Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CB_Region_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>OEM Districts</relationshipLabel>
        <relationshipName>Region_Account_Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB_SVC_District_Notes__c</fullName>
        <description>Used to enter general notes in regards to GM Districts.</description>
        <label>District Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CB_Zone_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>All zone managers in the districts region are related to the region account.  One zone manager may be related to multiple districts but they have to come from the correct region.</description>
        <label>Zone Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a contact from the listed Region Account.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.CB_Region_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OEM District (Zone Manager)</relationshipLabel>
        <relationshipName>Zone_Manager_Districts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>OEM District</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CB_Region_Account__c</columns>
        <columns>CB_OEM_District_Name__c</columns>
        <columns>CB_FRM_GM_Division__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CB_District_Manager__c</columns>
        <columns>CB_Zone_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>Silveira</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Districts</fullName>
        <columns>NAME</columns>
        <columns>CB_OEM_District_Name__c</columns>
        <columns>CB_District_Manager__c</columns>
        <columns>CB_Zone_Manager__c</columns>
        <columns>CB_SVC_District_Notes__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Districts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OEMD-{00000}</displayFormat>
        <label>OEM District</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OEM Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>